added more comments

--- a/html/vehicle.html
+++ b/html/vehicle.html
@@ -178,6 +178,7 @@
                     </table>
                     <div class="row">
                         <div class="col">
+                            <!--a table of all the past owners of the vehicle-->
                             <table class="table table-striped table-hover">
                                 <thead>
                                     <tr>
@@ -218,6 +219,7 @@
                     </div>
                 </div>
             </div>
+            <!--create the submit button in it's own row-->
             <div class="row">
                 <div>
                     <a href="#" class="btn btn-primary" style="background-color: #F7931D;">Submit</a>
